# hw2.mtm

./: CMakeLists.txt  challenge.c  challenge_room_system_fields.h  challenge_system.c  challenge_system.h  challenge_system_banch_tests.c  challenge_system_test_1.c  main.c  system1_file.txt  system2_file.txt  system_additional_types.h  visitor_room.c  visitor_room.h
hw2/: challenge.c  challenge_room_system_fields.h  challenge_system.c
hw2.xcodeproj/: project.pbxproj
hw2.xcodeproj/xcuserdata/sagibouzaglo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
hw2.xcodeproj/xcuserdata/sagibouzaglo.xcuserdatad/xcschemes/: hw2.xcscheme  xcschememanagement.plist
